
Version 6.0.51 - 2024-09-01
---------------------------
* Bug fixes (see mercurial logs for details)


Version 6.0.50 - 2024-08-01
---------------------------
* Bug fixes (see mercurial logs for details)


Version 6.0.49 - 2024-07-17
---------------------------
* Bug fixes (see mercurial logs for details)


Version 6.0.48 - 2024-06-15
---------------------------
* Bug fixes (see mercurial logs for details)


Version 6.0.47 - 2024-06-02
---------------------------
* Bug fixes (see mercurial logs for details)


Version 6.0.46 - 2024-05-01
---------------------------
* Bug fixes (see mercurial logs for details)


Version 6.0.45 - 2024-04-17
---------------------------
* Bug fixes (see mercurial logs for details)
* Do not accept compressed content from unauthenticated request (#13142)

Version 6.0.44 - 2024-04-04
---------------------------
* Bug fixes (see mercurial logs for details)


Version 6.0.43 - 2024-03-03
---------------------------
* Bug fixes (see mercurial logs for details)


Version 6.0.42 - 2024-02-15
---------------------------
* Bug fixes (see mercurial logs for details)


Version 6.0.41 - 2024-02-03
---------------------------
* Bug fixes (see mercurial logs for details)


Version 6.0.40 - 2024-01-15
---------------------------
* Bug fixes (see mercurial logs for details)


Version 6.0.39 - 2023-12-16
---------------------------
* Bug fixes (see mercurial logs for details)


Version 6.0.38 - 2023-11-17
---------------------------
* Bug fixes (see mercurial logs for details)


Version 6.0.37 - 2023-11-03
---------------------------
* Bug fixes (see mercurial logs for details)


Version 6.0.36 - 2023-10-04
---------------------------
* Bug fixes (see mercurial logs for details)


Version 6.0.35 - 2023-09-06
---------------------------
* Bug fixes (see mercurial logs for details)


Version 6.0.34 - 2023-07-31
---------------------------
* Bug fixes (see mercurial logs for details)
* Enforce record rules when reading only non SQL fields (#12428)
