@@ -1,3 +1,4 @@
+* Check read access of report records (#13505)
 
 Version 6.0.51 - 2024-09-01
 ---------------------------
